docs/relex.ebnf
Rules ::= Rule+

Rule ::= "RULE" Identifier Capture? Pattern "=>" Action

Identifier ::= [A-Z] [a-zA-Z_]+

Capture ::= "(" (CaptureItem ",")* CaptureItem ")"
CaptureItem ::= CaptureIdentifier ":" CaptureType
CaptureType::= [a-zA-Z_] [a-zA-Z0-9_]+

CaptureIdentifier ::= [a-zA-Z_]+

Pattern ::= "[" PatternItem "]"
PatternItem ::= Char+

Action ::= "%%{" ActionItem "}%%"
ActionItem ::= Char+

Char ::= #x9 | #xA | #xD | [#x20-#xD7FF] | [#xE000-#xFFFD] | [#x10000-#x10FFFF]
